--- a/scss/pages/_about-me.scss
+++ b/scss/pages/_about-me.scss
@@ -37,16 +37,15 @@
     }
     &__profile-photo {
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
         padding-left: 0;
         padding-right: 0;
         &--radius {
             border-radius: 50%;
-            height: 300px;
-            width: 300px;
-            transform: rotate(275deg);
+            height: 350px;
+            width: 350px;
             object-fit: cover;
-            border: 5px solid $white;
+            border: 5px solid $blue;
         }
     }
 }
@@ -57,6 +56,9 @@
         font-size: 14px;
         .row {
             flex-direction: column-reverse;
+        }
+        &__profile-photo {
+            margin-bottom: 2.5rem;
         }
     }
     .about-me__biographi {
